# AIPhoneAtHome

./: .gitignore  BUILD_SUMMARY.md  CONTRIBUTING.md  GITHUB_DESKTOP_INSTRUCTIONS.md  INITIAL_COMMIT_MESSAGE.txt  LICENSE  POWERSHELL_GUIDE.md  README.md  pyproject.toml  requirements.txt  run.bat  run.ps1  run.sh  setup.bat  setup.ps1  setup.sh
.github/workflows/: ci.yml
app/: __init__.py  config.py  main.py  websocket_handler.py
app/audio/: __init__.py  echo_cancellation.py  noise_reduction.py  processor.py  tts_engine.py  vad.py  whisper_turbo.py
app/conversation/: __init__.py  interruption.py  state_machine.py  turn_manager.py
app/llm/: __init__.py  context_manager.py  ollama_client.py  response_generator.py
app/utils/: audio_utils.py  logger.py  metrics.py
config/: .env.example  config.yaml
docker/: Dockerfile  docker-compose.yml
scripts/: health_check.py  install_models.py  setup.py  test_audio.py
tests/: test_audio.py  test_conversation.py  test_integration.py
