[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phone-ai-agent"
version = "1.0.0"
description = "Ultra-low latency phone AI agent with local processing"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "AI Phone Agent Team"}
]
keywords = ["ai", "voice", "telephony", "twilio", "ollama", "whisper", "real-time"]

dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "python-dotenv>=1.0.0",
    "twilio>=8.10.0",
    "numpy>=1.24.3",
    "scipy>=1.11.4",
    "faster-whisper>=0.10.0",
    "ollama>=0.1.6",
    "aiohttp>=3.9.1",
    "pyyaml>=6.0.1",
    "prometheus-client>=0.19.0",
    "structlog>=23.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
]

gpu = [
    "torch>=2.0.0",
    "onnxruntime-gpu>=1.16.3",
]

[project.scripts]
phone-agent = "app.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
